pyinterp/pyinterp/pyinterp/tests/must_pass/math/errors/log_domain1.py
print(math.log(0.0))